com.github.spheras.desktopfolder (1.0.7) precise; urgency=low

  * Change Wallpaper from Desktop right click
  * Dutch Translation by @Vistaus
  * Improved Russian Translation by @ingumsky
  * Updated project for Elementary Juno

 -- José Amuedo <joseamuedo@gmail.com>  Fri, 20 Sep 2018 19:13:00 +0200

com.github.spheras.desktopfolder (1.0.6) precise; urgency=low

  * Italian translation
  * Minor saving performance improvements
  * *~ files are ignored now

 -- José Amuedo <joseamuedo@gmail.com>  Fri, 16 Feb 2018 17:31:00 +0200

com.github.spheras.desktopfolder (1.0.5) precise; urgency=low

  * Desktop Background
  * Rename in Place
  * Different Notes Status (top, back, normal)
  * Buttons to Headers (remove)
  * Link Panels to folders
  * Photo Scale aspect ratio
  * Custom Colors for Panel and Notes
  * Menu Redesign & Panel Settings Window
  * Restore Windows when Super+D is pressed again
  * Resolution Strategy to prevent widgets going off-screen
  * Use .desktopnote/.desktopphoto rather than .dfn/.dfp
  * Don't allow renaming panels to invalid folder names
  * Serbian translation by @pavlepiramida
  * Russian translation by @camellan
  * Arch building by @GabMus
  * A lot of Minor Bugfixing

 -- José Amuedo <joseamuedo@gmail.com>  Sat, 26 Dec 2017 11:50:00 +0200

com.github.spheras.desktopfolder (1.0.2) precise; urgency=low

  * Drag and Drop to Move/Copy/Link depending on key pressed (none/control/alt|shift)
  * Text Shadow and Bold configuration
  * Deleting Last Panel bugfixing
  * Move panels from body
  * DESKTOP window types (workspace movement improvement and others)
  * Drag and Drop folders (recursive copy)
  * Undo/Redo and others over Text Notes
  * Menu Redesign
  * Lithuanian and French translations
  * Minor Bugfixing

 -- José Amuedo <joseamuedo@gmail.com>  Thu, 19 Oct 2017 18:32:00 +0200

com.github.spheras.desktopfolder (1.0.1) precise; urgency=low

   * Show Desktop shortcut bugfix.
